Upgrade UI with Articles

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -256,6 +256,7 @@
     <string name="dobrze">Well</string>
     <string name="wspaniale">Great</string>
     <string name="ocen_jak_mija_ci_dzisiaj_dzien">Rate how your day is going today!</string>
+    <string name="articles">Articles</string>
 
 
 </resources>
