--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,6 +258,7 @@
     <string name="dobrze">Dobrze</string>
     <string name="wspaniale">Wspaniale</string>
     <string name="ocen_jak_mija_ci_dzisiaj_dzien">Oceń jak mija Ci dzisiaj dzień!</string>
+    <string name="articles">Arytkuły</string>
 
 
 </resources>
