Add room and kapt to gradle. Add database. Add MoodsScreen. Add emotion check with animation to Home.kt. WARNING! in MoodViewModel is init{clearDb()} which clear db. Delete it before make update in GP

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -258,6 +258,7 @@
     <string name="ocen_jak_mija_ci_dzisiaj_dzien">Rate how your day is going today!</string>
     <string name="articles">Articles</string>
     <string name="calm_down">Calm down</string>
+    <string name="emocje">Emotions</string>
 
 
 </resources>
