--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -260,6 +260,7 @@
     <string name="ocen_jak_mija_ci_dzisiaj_dzien">Oceń jak mija Ci dzisiaj dzień!</string>
     <string name="articles">Arytkuły</string>
     <string name="calm_down">Calm down</string>
+    <string name="emocje">Emocje</string>
 
 
 </resources>
