Add ToDo db and everything works. WARNING in ToDoViewModel in init is dropDb(). Erase it before publish it!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -273,6 +273,6 @@
     <string name="lokalizacja_medytacje"><![CDATA[Psychea -> Narzędzia -> Trening mózgu]]></string>
     <string name="emocje_liniawsparcia">Rozważ konsultacje z linią wsparcia!</string>
     <string name="telefonzaufania_lokalizacja"><![CDATA[Psychea -> Narzędzia -> Telefon zaufania]]></string>
-
+    <string name="tiktok" translatable="false">TikTok</string>
 
 </resources>
