--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -278,5 +278,9 @@
     <string name="szumy">Noises</string>
     <string name="klasyki">Classical</string>
     <string name="twoja_rednia_emocji_od_zainstalowania_aplikacji">Your average emotions since installing the application: </string>
+    <string name="for_better_psyche">~ For better psyche ~</string>
+    <string name="wiadomo_od_tw_rc_w">Message from author</string>
+    <string name="kierownik_projektu_micha_ma_eczek">- project manager, Michał Małeczek</string>
+
 
 </resources>
