--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -288,5 +288,7 @@
     <string name="zako_czenie_projektu">Zakończenie projektu</string>
     <string name="for_better_psyche">~ For better psyche ~</string>
     <string name="kierownik_projektu_micha_ma_eczek">- kierownik projektu, Michał Małeczek</string>
+    <string name="podziekowania_koncowe">Cześć! Nasz projekt dobiega końca. Dla naszego zespołu był to naprawdę wspaniały czas, liczę, że dla Ciebie również. Zarówno my jak i Wy nauczyliśmy się sporo podczas tego projektu. Zakończenie projektu nie oznacza końca Psychea! Aplikacja będzie ciągle dostępna w Google Play i będzie przez Nas obsługiwana. Zachęcamy do dalszego korzystanie z naszej aplikacji i polecania jej znajomym i rodzinie. Jeśli masz jakieś pomysły odnośnie rozwoju aplikacji koniecznie daj nam o tym znać! Jeśli podoba Ci się nasza aplikacja, wystaw nam pozytywną ocenę w Google Play! Zachęcamy Was również do obserwowania naszych mediów społecznościowych.</string>
+    <string name="dzi_ki_e_byli_cie_z_nami">Dzięki, że byliście z nami!</string>
 
 </resources>
